--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,9 @@ services:
       - .env
     environment:
       - NODE_ENV=development
+      # Override DATABASE_URL so the app in Docker uses the "db" service host (not localhost).
+      # .env uses localhost for local CLI (drizzle-kit, db:studio, etc.) and host-run app.
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     volumes:
       - .:/app
       - app_node_modules:/app/node_modules
